files upload and recieve link

--- a/src/App.less
+++ b/src/App.less
@@ -122,12 +122,18 @@ input[type="file"]::file-selector-button {
     .Expired {
       color: red;
     }
+  
   }
   
   .Actions {
     display: flex;
     flex-direction: column;
     gap: 4px;
+  }
+
+  .Files {
+    display: flex;
+    flex-direction: column;
   }
 }
 
