--- a/src/App.less
+++ b/src/App.less
@@ -71,6 +71,13 @@ button[type=submit], button[type=button] {
   &.Save {
     background-color: #2ECC71 ;
    }
+  &.DeleteIcon {
+    padding: 2px;
+    background-color: #CB4335;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 input[type="file"]::file-selector-button {
@@ -96,6 +103,7 @@ input[type="file"]::file-selector-button {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 8px;
   .Info {
     display: flex;
     flex-direction: column;
@@ -107,7 +115,7 @@ input[type="file"]::file-selector-button {
     .CardHeader {
       display: flex;
       flex-direction: row;
-      align-items: flex-end;
+      align-items: center;
       gap: 8px;
     };
     .Name {
@@ -134,6 +142,13 @@ input[type="file"]::file-selector-button {
   .Files {
     display: flex;
     flex-direction: column;
+    text-align: left;
+  }
+  .FileDelete {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2px;
   }
 }
 
