--- a/src/App.less
+++ b/src/App.less
@@ -24,6 +24,10 @@ h1 {
 .Home {
   display: grid;
   grid-template-columns: 1fr 2fr;  
+  .NoTodos {
+    font-weight: bold;
+    margin-top: 40px;
+  }
 }
 
 .CreateTodo {
