--- a/src/App.less
+++ b/src/App.less
@@ -3,22 +3,36 @@
 }
 
 .App-header {
-  background-color: #282c34;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 20px;
+  color: #282c34;
   padding: 16px;  
   position: sticky;
   top: 0;
   left: 0;
   z-index: 2;
+  background: rgba(255, 255, 255, 0.32);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.6px);
+  -webkit-backdrop-filter: blur(8.6px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.47)
 }
 
 h1 {
   margin: 0
+}
+
+a {
+  color: #282c3499;
+  &:hover {
+    color: #282c34;
+  };
+  &:visited {
+    color: #622362;
+  }
 }
 
 .Home {
@@ -31,7 +45,8 @@ h1 {
 }
 
 .CreateTodo {
-  border: 2px solid #282c34;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.47);
   padding: 16px;
   border-radius: 10px;
   display: flex; 
@@ -52,7 +67,7 @@ h1 {
 }
 
 input[type=text], input[type=date], textarea {
-  border: 1px solid #282c34;
+  border: 1px solid #919191;
   border-radius: 8px;
   padding: 4px;
 }
@@ -64,13 +79,15 @@ button[type=submit], button[type=button] {
   border-radius: 8px;
   padding: 8px;
   text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
   cursor: pointer;
   transition: .2s ease-in-out 0s;
   &:hover {
     transform: scale(1.02)
   };
   &.Delete {
-    background-color: #CB4335;
+    background-color: #CB4335 ;
   }
   &.Save {
     background-color: #2ECC71 ;
@@ -85,7 +102,7 @@ button[type=submit], button[type=button] {
 }
 
 input[type="file"]::file-selector-button {
-  border: 1px solid #282c34;
+  border: 1px solid #919191;
   border-radius: 8px;
   padding: 4px;
   background-color: white;
@@ -101,7 +118,8 @@ input[type="file"]::file-selector-button {
 }
 
 .Card {
-  border: 2px solid #282c34;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.47);
   padding: 16px;
   border-radius: 10px;
   display: flex;
